Refactor compute_torques function for improved efficiency and clarity

--- a/Modeling/Kinematics/math/torque/general_dynamics/general_for_both.ipynb
+++ b/Modeling/Kinematics/math/torque/general_dynamics/general_for_both.ipynb
@@ -508,6 +508,304 @@
     "\n",
     "print(f\"Maximum Dynamic Torques for given values: {max_torque_per_joint}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing dynamic torque analysis across all configurations...\n"
+     ]
+    },
+    {
+     "ename": "ShapeError",
+     "evalue": "Matrix size mismatch: (5, 5) + (6, 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mShapeError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 256\u001b[0m\n\u001b[0;32m    254\u001b[0m \u001b[38;5;66;03m# Note: This is a dynamic analysis\u001b[39;00m\n\u001b[0;32m    255\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPerforming dynamic torque analysis across all configurations...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 256\u001b[0m max_torque_per_joint \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_dynamic_torques\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    257\u001b[0m \u001b[43m    \u001b[49m\u001b[43md_1_val\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    258\u001b[0m \u001b[43m    \u001b[49m\u001b[43md_5_val\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    259\u001b[0m \u001b[43m    \u001b[49m\u001b[43ma_2_val\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    260\u001b[0m \u001b[43m    \u001b[49m\u001b[43ma_3_val\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    261\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmasses\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    262\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmass_camera\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    263\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmass_lights\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    264\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexternal_forces\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    265\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexternal_torques\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    266\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m    268\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaximum Torques for given values: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_torque_per_joint\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 99\u001b[0m, in \u001b[0;36mcompute_dynamic_torques\u001b[1;34m(d_1_val, d_5_val, a_2_val, a_3_val, masses, mass_camera, mass_lights, external_forces, external_torques)\u001b[0m\n\u001b[0;32m     97\u001b[0m D \u001b[38;5;241m=\u001b[39m sp\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m Jw, I \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m([Jw1, Jw2, Jw3, Jw4, Jw5], [I1, I2, I3, I4, I5]):\n\u001b[1;32m---> 99\u001b[0m     \u001b[43mD\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mJw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mI\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mJw\u001b[49m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;66;03m# Compute the Coriolis and centrifugal forces matrix\u001b[39;00m\n\u001b[0;32m    102\u001b[0m C \u001b[38;5;241m=\u001b[39m sp\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n",
+      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\sympy\\core\\decorators.py:106\u001b[0m, in \u001b[0;36mcall_highest_priority.<locals>.priority_decorator.<locals>.binary_op_wrapper\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    104\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m f \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    105\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m--> 106\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\sympy\\matrices\\common.py:2642\u001b[0m, in \u001b[0;36mMatrixArithmetic.__add__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m   2640\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(other, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshape\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   2641\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m!=\u001b[39m other\u001b[38;5;241m.\u001b[39mshape:\n\u001b[1;32m-> 2642\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ShapeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatrix size mismatch: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m + \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (\n\u001b[0;32m   2643\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape, other\u001b[38;5;241m.\u001b[39mshape))\n\u001b[0;32m   2645\u001b[0m \u001b[38;5;66;03m# honest SymPy matrices defer to their class's routine\u001b[39;00m\n\u001b[0;32m   2646\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(other, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mis_Matrix\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m   2647\u001b[0m     \u001b[38;5;66;03m# call the highest-priority class's _eval_add\u001b[39;00m\n",
+      "\u001b[1;31mShapeError\u001b[0m: Matrix size mismatch: (5, 5) + (6, 6)"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import product\n",
+    "\n",
+    "def compute_dynamic_torques(d_1_val, d_5_val, a_2_val, a_3_val, masses, mass_camera, mass_lights, external_forces, external_torques):\n",
+    "    \"\"\"\n",
+    "    Compute the maximum dynamic torques for a robotic arm across all configurations.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    d_1_val (float): DH parameter d_1.\n",
+    "    d_5_val (float): DH parameter d_5.\n",
+    "    a_2_val (float): DH parameter a_2.\n",
+    "    a_3_val (float): DH parameter a_3.\n",
+    "    masses (list): List of masses for each link.\n",
+    "    mass_camera (float): Mass of the camera attached to the last link.\n",
+    "    mass_lights (float): Mass of the lights attached to the last link.\n",
+    "    external_forces (list): External forces acting on the end effector [F_ext_x, F_ext_y, F_ext_z].\n",
+    "    external_torques (list): External torques acting on each joint [T_ext_1, T_ext_2, T_ext_3, T_ext_4, T_ext_5].\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: Maximum torques for each joint.\n",
+    "    \"\"\"\n",
+    "    # Define symbolic variables for joint angles, DH parameters, velocities, accelerations, and masses\n",
+    "    theta = sp.symbols(\"theta_1 theta_2 theta_3 theta_4 theta_5\")\n",
+    "    theta_dot = sp.symbols(\"theta_dot_1 theta_dot_2 theta_dot_3 theta_dot_4 theta_dot_5\")\n",
+    "    theta_ddot = sp.symbols(\"theta_ddot_1 theta_ddot_2 theta_ddot_3 theta_ddot_4 theta_ddot_5\")\n",
+    "    d_1, d_5 = sp.symbols(\"d_1 d_5\")\n",
+    "    a_2, a_3 = sp.symbols(\"a_2 a_3\")\n",
+    "    alpha = [90, 0, 0, 90, 0]\n",
+    "    m1, m2, m3, m4, m5 = sp.symbols(\"m1 m2 m3 m4 m5\")\n",
+    "    g = sp.Matrix([0, 0, -9.81])\n",
+    "\n",
+    "    def dh_matrix(theta, d, a, alpha):\n",
+    "        \"\"\"Create a transformation matrix from DH parameters.\"\"\"\n",
+    "        alpha_rad = sp.rad(alpha)\n",
+    "        return sp.Matrix([\n",
+    "            [sp.cos(theta), -sp.sin(theta) * sp.cos(alpha_rad), sp.sin(theta) * sp.sin(alpha_rad), a * sp.cos(theta)],\n",
+    "            [sp.sin(theta), sp.cos(theta) * sp.cos(alpha_rad), -sp.cos(theta) * sp.sin(alpha_rad), a * sp.sin(theta)],\n",
+    "            [0, sp.sin(alpha_rad), sp.cos(alpha_rad), d],\n",
+    "            [0, 0, 0, 1]\n",
+    "        ])\n",
+    "\n",
+    "    # Create transformation matrices\n",
+    "    A1 = dh_matrix(theta[0], d_1, 0, alpha[0])\n",
+    "    A2 = dh_matrix(theta[1], 0, a_2, alpha[1])\n",
+    "    A3 = dh_matrix(theta[2], 0, a_3, alpha[2])\n",
+    "    A4 = dh_matrix(theta[3], 0, 0, alpha[3])\n",
+    "    A5 = dh_matrix(theta[4], d_5, 0, alpha[4])\n",
+    "\n",
+    "    # Compute the individual transformation matrices\n",
+    "    T1 = A1\n",
+    "    T2 = T1 * A2\n",
+    "    T3 = T2 * A3\n",
+    "    T4 = T3 * A4\n",
+    "    T5 = T4 * A5\n",
+    "\n",
+    "    # Extract positions of each link's center of mass\n",
+    "    p1 = T1[:3, 3] / 2\n",
+    "    p2 = T2[:3, 3] / 2\n",
+    "    p3 = T3[:3, 3] / 2\n",
+    "    p4 = T4[:3, 3] / 2\n",
+    "    p5 = T5[:3, 3] / 2\n",
+    "\n",
+    "    # Compute the Jacobians for each center of mass\n",
+    "    Jv1 = p1.jacobian(theta)\n",
+    "    Jv2 = p2.jacobian(theta)\n",
+    "    Jv3 = p3.jacobian(theta)\n",
+    "    Jv4 = p4.jacobian(theta)\n",
+    "    Jv5 = p5.jacobian(theta)\n",
+    "\n",
+    "    # Compute the gravity vector for each link (assuming center of mass at the link origin)\n",
+    "    G1 = Jv1.T * (m1 * g)\n",
+    "    G2 = Jv2.T * (m2 * g)\n",
+    "    G3 = Jv3.T * (m3 * g)\n",
+    "    G4 = Jv4.T * (m4 * g)\n",
+    "    G5 = Jv5.T * ((m5 + mass_camera + mass_lights) * g)  # Adding camera and lights masses to the last link\n",
+    "\n",
+    "    # Sum the gravity vectors\n",
+    "    G = G1 + G2 + G3 + G4 + G5\n",
+    "\n",
+    "    # Compute the inertia matrix for each link (assuming simple diagonal inertia for each link)\n",
+    "    I1 = sp.diag(m1 * d_1_val**2 / 12, m1 * d_1_val**2 / 12, m1 * d_1_val**2 / 12)\n",
+    "    I2 = sp.diag(m2 * a_2_val**2 / 12, m2 * a_2_val**2 / 12, m2 * a_2_val**2 / 12)\n",
+    "    I3 = sp.diag(m3 * a_3_val**2 / 12, m3 * a_3_val**2 / 12, m3 * a_3_val**2 / 12)\n",
+    "    I4 = sp.diag(m4 * d_5_val**2 / 12, m4 * d_5_val**2 / 12, m4 * d_5_val**2 / 12)\n",
+    "    I5 = sp.diag((m5 + mass_camera + mass_lights) * d_5_val**2 / 12, (m5 + mass_camera + mass_lights) * d_5_val**2 / 12, (m5 + mass_camera + mass_lights) * d_5_val**2 / 12)\n",
+    "\n",
+    "    # Compute the angular velocity Jacobians for each link\n",
+    "    Jw1 = sp.Matrix.hstack(sp.zeros(3, 0), sp.eye(3), sp.zeros(3, 2))\n",
+    "    Jw2 = sp.Matrix.hstack(sp.zeros(3, 1), T1[:3, :3], sp.zeros(3, 1))\n",
+    "    Jw3 = sp.Matrix.hstack(sp.zeros(3, 2), T2[:3, :3])\n",
+    "    Jw4 = sp.Matrix.hstack(sp.zeros(3, 3), T3[:3, :3])\n",
+    "    Jw5 = sp.Matrix.hstack(sp.zeros(3, 4), T4[:3, :3])\n",
+    "\n",
+    "    # Compute the inertia matrix for the entire robot\n",
+    "    D = sp.zeros(5, 5)\n",
+    "    for Jw, I in zip([Jw1, Jw2, Jw3, Jw4, Jw5], [I1, I2, I3, I4, I5]):\n",
+    "        D += Jw.T * I * Jw\n",
+    "\n",
+    "    # Compute the Coriolis and centrifugal forces matrix\n",
+    "    C = sp.zeros(5, 5)\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            C[i, j] = 0.5 * sum([D[i, j].diff(theta[k]) + D[i, k].diff(theta[j]) - D[j, k].diff(theta[i]) for k in range(5)]) * theta_dot[k]\n",
+    "\n",
+    "    # Define symbolic variables for external forces and torques\n",
+    "    F_ext_x, F_ext_y, F_ext_z = sp.symbols(\"F_ext_x F_ext_y F_ext_z\")\n",
+    "    T_ext_1, T_ext_2, T_ext_3, T_ext_4, T_ext_5 = sp.symbols(\"T_ext_1 T_ext_2 T_ext_3 T_ext_4 T_ext_5\")\n",
+    "\n",
+    "    F_ext = sp.Matrix([F_ext_x, F_ext_y, F_ext_z])\n",
+    "    T_ext = sp.Matrix([T_ext_1, T_ext_2, T_ext_3, T_ext_4, T_ext_5])\n",
+    "\n",
+    "    # Compute the Jacobian for the external force application point (assuming it is the end effector)\n",
+    "    Jv_ext = T5[:3, 3].jacobian(theta)\n",
+    "\n",
+    "    # Compute the torques due to external forces and torques\n",
+    "    tau_ext_forces = Jv_ext.T * F_ext\n",
+    "    tau_ext = tau_ext_forces + T_ext\n",
+    "\n",
+    "    # Compute the total torque required for each joint\n",
+    "    tau_total = D * sp.Matrix(theta_ddot) + C * sp.Matrix(theta_dot) + G + tau_ext\n",
+    "\n",
+    "    # Simplify the total torques\n",
+    "    tau_total_simplified = sp.simplify(tau_total)\n",
+    "\n",
+    "    # Provide numerical values for testing\n",
+    "    values = {\n",
+    "        d_1: d_1_val,\n",
+    "        d_5: d_5_val,\n",
+    "        a_2: a_2_val,\n",
+    "        a_3: a_3_val,\n",
+    "        m1: masses[0],\n",
+    "        m2: masses[1],\n",
+    "        m3: masses[2],\n",
+    "        m4: masses[3],\n",
+    "        m5: masses[4],\n",
+    "        F_ext_x: external_forces[0],\n",
+    "        F_ext_y: external_forces[1],\n",
+    "        F_ext_z: external_forces[2],\n",
+    "        T_ext_1: external_torques[0],\n",
+    "        T_ext_2: external_torques[1],\n",
+    "        T_ext_3: external_torques[2],\n",
+    "        T_ext_4: external_torques[3],\n",
+    "        T_ext_5: external_torques[4],\n",
+    "    }\n",
+    "\n",
+    "    # Initialize the maximum torque tracker and store configurations\n",
+    "    max_torque_per_joint = np.zeros(5)\n",
+    "    top_configurations = []\n",
+    "\n",
+    "    # Define the range for joint angles, velocities, and accelerations\n",
+    "    angle_range = np.linspace(-np.pi, np.pi, 10)  # 10 steps from -π to π\n",
+    "    velocity_range = np.linspace(-1, 1, 5)  # Velocity range from -1 to 1 rad/s\n",
+    "    acceleration_range = np.linspace(-5, 5, 5)  # Acceleration range from -5 to 5 rad/s^2\n",
+    "\n",
+    "    # Generate all combinations of joint angles, velocities, and accelerations\n",
+    "    angle_combinations = list(product(angle_range, repeat=5))\n",
+    "    velocity_combinations = list(product(velocity_range, repeat=5))\n",
+    "    acceleration_combinations = list(product(acceleration_range, repeat=5))\n",
+    "\n",
+    "    # Precompute torque function\n",
+    "    tau_total_func = sp.lambdify(\n",
+    "        (theta + theta_dot + theta_ddot),\n",
+    "        tau_total_simplified.subs(values),\n",
+    "        \"numpy\",\n",
+    "    )\n",
+    "\n",
+    "    # Iterate over all combinations of joint angles, velocities, and accelerations, and compute torques\n",
+    "    for angles in angle_combinations:\n",
+    "        for velocities in velocity_combinations:\n",
+    "            for accelerations in acceleration_combinations:\n",
+    "                numerical_torques = np.array(tau_total_func(*angles, *velocities, *accelerations), dtype=float).flatten()\n",
+    "                if np.any(np.abs(numerical_torques) > max_torque_per_joint):\n",
+    "                    max_torque_per_joint = np.maximum(max_torque_per_joint, np.abs(numerical_torques))\n",
+    "                    top_configurations.append((angles, velocities, accelerations, numerical_torques))\n",
+    "\n",
+    "    # Sort the configurations by the highest torque experienced\n",
+    "    top_configurations.sort(key=lambda x: np.max(np.abs(x[3])), reverse=True)\n",
+    "    top_configurations = top_configurations[:3]  # Get top three configurations\n",
+    "\n",
+    "    # Plot the maximum torques\n",
+    "    joints = [\"Joint 1\", \"Joint 2\", \"Joint 3\", \"Joint 4\", \"Joint 5\"]\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    bars = plt.bar(joints, max_torque_per_joint.tolist(), color=\"blue\")\n",
+    "    plt.xlabel(\"Joints\")\n",
+    "    plt.ylabel(\"Maximum Torque (Nm)\")\n",
+    "    plt.title(\"Maximum Dynamic Torque on Each Joint Across All Configurations\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.6)\n",
+    "\n",
+    "    # Annotate bars with their values\n",
+    "    for bar in bars:\n",
+    "        yval = bar.get_height()\n",
+    "        plt.text(\n",
+    "            bar.get_x() + bar.get_width() / 2,\n",
+    "            yval,\n",
+    "            f\"{yval:.2f}\",\n",
+    "            va=\"bottom\" if yval < 0 else \"top\",\n",
+    "            ha=\"center\",\n",
+    "            color=\"black\",\n",
+    "        )\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Print the maximum torques\n",
+    "    print(f\"Maximum Torques for given values: {max_torque_per_joint.tolist()}\")\n",
+    "\n",
+    "    # Plot the top three configurations\n",
+    "    fig = plt.figure(figsize=(15, 10))\n",
+    "    for i, (angles, velocities, accelerations, torques) in enumerate(top_configurations):\n",
+    "        ax = fig.add_subplot(1, 3, i+1, projection='3d')\n",
+    "\n",
+    "        # Evaluate transformation matrices\n",
+    "        T1_eval = np.array(T1.subs(values).subs({theta[0]: angles[0]})).astype(np.float64)\n",
+    "        T2_eval = np.array(T2.subs(values).subs({theta[0]: angles[0], theta[1]: angles[1]})).astype(np.float64)\n",
+    "        T3_eval = np.array(T3.subs(values).subs({theta[0]: angles[0], theta[1]: angles[1], theta[2]: angles[2]})).astype(np.float64)\n",
+    "        T4_eval = np.array(T4.subs(values).subs({theta[0]: angles[0], theta[1]: angles[1], theta[2]: angles[2], theta[3]: angles[3]})).astype(np.float64)\n",
+    "        T5_eval = np.array(T5.subs(values).subs({theta[0]: angles[0], theta[1]: angles[1], theta[2]: angles[2], theta[3]: angles[3], theta[4]: angles[4]})).astype(np.float64)\n",
+    "\n",
+    "        positions = np.vstack([\n",
+    "            np.array([0, 0, 0]),\n",
+    "            T1_eval[:3, 3],\n",
+    "            T2_eval[:3, 3],\n",
+    "            T3_eval[:3, 3],\n",
+    "            T4_eval[:3, 3],\n",
+    "            T5_eval[:3, 3]\n",
+    "        ])\n",
+    "\n",
+    "        ax.plot(positions[:, 0], positions[:, 1], positions[:, 2], 'o-', markersize=10)\n",
+    "        ax.set_title(f\"Configuration {i+1}\\nTorques: {np.round(torques, 2)} Nm\")\n",
+    "        ax.set_xlabel('X')\n",
+    "        ax.set_ylabel('Y')\n",
+    "        ax.set_zlabel('Z')\n",
+    "        ax.set_xlim([-1, 1])\n",
+    "        ax.set_ylim([-1, 1])\n",
+    "        ax.set_zlim([0, 1])\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    return max_torque_per_joint.tolist()\n",
+    "\n",
+    "# Experiment with different values\n",
+    "d_1_val = 0.1\n",
+    "d_5_val = 0.1\n",
+    "a_2_val = 0.5\n",
+    "a_3_val = 0.5\n",
+    "masses = [1.0, 1.0, 1.0, 1.0, 1.0]\n",
+    "mass_camera = 0.5\n",
+    "mass_lights = 0.5\n",
+    "external_forces = [0, 0, 0]  # No external forces in this example\n",
+    "external_torques = [0, 0, 0, 0, 0]  # No external torques in this example\n",
+    "\n",
+    "# Note: This is a dynamic analysis\n",
+    "print(\"Performing dynamic torque analysis across all configurations...\")\n",
+    "max_torque_per_joint = compute_dynamic_torques(\n",
+    "    d_1_val,\n",
+    "    d_5_val,\n",
+    "    a_2_val,\n",
+    "    a_3_val,\n",
+    "    masses,\n",
+    "    mass_camera,\n",
+    "    mass_lights,\n",
+    "    external_forces,\n",
+    "    external_torques,\n",
+    ")\n",
+    "\n",
+    "print(f\"Maximum Torques for given values: {max_torque_per_joint}\")\n"
+   ]
   }
  ],
  "metadata": {
