Refactor compute_dynamic_torques function for improved efficiency and clarity

--- a/Modeling/Kinematics/math/torque/general_dynamics/general_for_both.ipynb
+++ b/Modeling/Kinematics/math/torque/general_dynamics/general_for_both.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Static"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -219,6 +226,13 @@
     ")\n",
     "\n",
     "print(f\"Maximum Torques for given values: {max_torque_per_joint}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dynamic + zero vel _ acc"
    ]
   },
   {
@@ -507,6 +521,284 @@
     ")\n",
     "\n",
     "print(f\"Maximum Dynamic Torques for given values: {max_torque_per_joint}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dynmaic with varying vel _ acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing dynamic torque analysis across all configurations and velocity/acceleration ranges...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import product\n",
+    "\n",
+    "# Define the computation function for dynamic analysis\n",
+    "def compute_dynamic_torques(d_1_val, d_5_val, a_2_val, a_3_val, masses, inertias, mass_camera, mass_lights, external_forces, external_torques, velocity_range, acceleration_range):\n",
+    "    # Define symbolic variables for joint angles, velocities, accelerations, DH parameters, masses, and inertia\n",
+    "    theta_1, theta_2, theta_3, theta_4, theta_5 = sp.symbols(\"theta_1 theta_2 theta_3 theta_4 theta_5\")\n",
+    "    d_1, d_5 = sp.symbols(\"d_1 d_5\")\n",
+    "    a_2, a_3 = sp.symbols(\"a_2 a_3\")\n",
+    "    alpha = [90, 0, 0, 90, 0]\n",
+    "    m1, m2, m3, m4, m5 = sp.symbols(\"m1 m2 m3 m4 m5\")\n",
+    "    g = sp.Matrix([0, 0, -9.81])\n",
+    "    dq1, dq2, dq3, dq4, dq5 = sp.symbols(\"dq1 dq2 dq3 dq4 dq5\")  # Joint velocities\n",
+    "    ddq1, ddq2, ddq3, ddq4, ddq5 = sp.symbols(\"ddq1 ddq2 ddq3 ddq4 ddq5\")  # Joint accelerations\n",
+    "\n",
+    "    # Define inertia matrices (assuming simple diagonal form for simplicity)\n",
+    "    I1_xx, I1_yy, I1_zz = sp.symbols(\"I1_xx I1_yy I1_zz\")\n",
+    "    I2_xx, I2_yy, I2_zz = sp.symbols(\"I2_xx I2_yy I2_zz\")\n",
+    "    I3_xx, I3_yy, I3_zz = sp.symbols(\"I3_xx I3_yy I3_zz\")\n",
+    "    I4_xx, I4_yy, I4_zz = sp.symbols(\"I4_xx I4_yy I4_zz\")\n",
+    "    I5_xx, I5_yy, I5_zz = sp.symbols(\"I5_xx I5_yy I5_zz\")\n",
+    "\n",
+    "    I1 = sp.diag(I1_xx, I1_yy, I1_zz)\n",
+    "    I2 = sp.diag(I2_xx, I2_yy, I2_zz)\n",
+    "    I3 = sp.diag(I3_xx, I3_yy, I3_zz)\n",
+    "    I4 = sp.diag(I4_xx, I4_yy, I4_zz)\n",
+    "    I5 = sp.diag(I5_xx, I5_yy, I5_zz)\n",
+    "\n",
+    "    # Helper function to create a transformation matrix from DH parameters\n",
+    "    def dh_matrix(theta, d, a, alpha):\n",
+    "        alpha_rad = sp.rad(alpha)\n",
+    "        return sp.Matrix(\n",
+    "            [\n",
+    "                [sp.cos(theta), -sp.sin(theta) * sp.cos(alpha_rad), sp.sin(theta) * sp.sin(alpha_rad), a * sp.cos(theta)],\n",
+    "                [sp.sin(theta), sp.cos(theta) * sp.cos(alpha_rad), -sp.cos(theta) * sp.sin(alpha_rad), a * sp.sin(theta)],\n",
+    "                [0, sp.sin(alpha_rad), sp.cos(alpha_rad), d],\n",
+    "                [0, 0, 0, 1],\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "    # Create transformation matrices\n",
+    "    A1 = dh_matrix(theta_1, d_1, 0, alpha[0])\n",
+    "    A2 = dh_matrix(theta_2, 0, a_2, alpha[1])\n",
+    "    A3 = dh_matrix(theta_3, 0, a_3, alpha[2])\n",
+    "    A4 = dh_matrix(theta_4, 0, 0, alpha[3])\n",
+    "    A5 = dh_matrix(theta_5, d_5, 0, alpha[4])\n",
+    "\n",
+    "    # Compute the individual transformation matrices\n",
+    "    T1 = A1\n",
+    "    T2 = T1 * A2\n",
+    "    T3 = T2 * A3\n",
+    "    T4 = T3 * A4\n",
+    "    T5 = T4 * A5\n",
+    "\n",
+    "    # Extract positions of each link's center of mass\n",
+    "    # Assume center of mass at the middle of each link for simplicity\n",
+    "    p1 = T1[:3, 3] / 2\n",
+    "    p2 = T2[:3, 3] / 2\n",
+    "    p3 = T3[:3, 3] / 2\n",
+    "    p4 = T4[:3, 3] / 2\n",
+    "    p5 = T5[:3, 3] / 2\n",
+    "\n",
+    "    # Compute the Jacobians for each center of mass\n",
+    "    Jv1 = p1.jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "    Jv2 = p2.jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "    Jv3 = p3.jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "    Jv4 = p4.jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "    Jv5 = p5.jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "\n",
+    "    # Compute the gravity vector for each link (assuming center of mass at the link origin)\n",
+    "    G1 = m1 * g\n",
+    "    G2 = m2 * g\n",
+    "    G3 = m3 * g\n",
+    "    G4 = m4 * g\n",
+    "    G5 = (m5 + mass_camera + mass_lights) * g  # Adding camera and lights masses to the last link\n",
+    "\n",
+    "    # Compute the torques due to gravity for each link\n",
+    "    tau_g1 = Jv1.T * G1\n",
+    "    tau_g2 = Jv2.T * G2\n",
+    "    tau_g3 = Jv3.T * G3\n",
+    "    tau_g4 = Jv4.T * G4\n",
+    "    tau_g5 = Jv5.T * G5\n",
+    "\n",
+    "    # Define symbolic variables for external forces and torques\n",
+    "    F_ext_x, F_ext_y, F_ext_z = sp.symbols(\"F_ext_x F_ext_y F_ext_z\")\n",
+    "    T_ext_1, T_ext_2, T_ext_3, T_ext_4, T_ext_5 = sp.symbols(\"T_ext_1 T_ext_2 T_ext_3 T_ext_4 T_ext_5\")\n",
+    "\n",
+    "    F_ext = sp.Matrix([F_ext_x, F_ext_y, F_ext_z])\n",
+    "    T_ext = sp.Matrix([T_ext_1, T_ext_2, T_ext_3, T_ext_4, T_ext_5])\n",
+    "\n",
+    "    # Compute the Jacobian for the external force application point (assuming it is the end effector)\n",
+    "    Jv_ext = T5[:3, 3].jacobian([theta_1, theta_2, theta_3, theta_4, theta_5])\n",
+    "\n",
+    "    # Compute the torques due to external forces and torques\n",
+    "    tau_ext_forces = Jv_ext.T * F_ext\n",
+    "    tau_ext = tau_ext_forces + T_ext\n",
+    "\n",
+    "    # Sum the torques due to gravity and external forces/torques\n",
+    "    tau_static = tau_g1 + tau_g2 + tau_g3 + tau_g4 + tau_g5 + tau_ext\n",
+    "\n",
+    "    # Inertia Matrix (M)\n",
+    "    M = sp.Matrix.zeros(5, 5)\n",
+    "    M += Jv1.T * m1 * Jv1 + Jv2.T * m2 * Jv2 + Jv3.T * m3 * Jv3 + Jv4.T * m4 * Jv4 + Jv5.T * m5 * Jv5\n",
+    "\n",
+    "    # Coriolis and Centrifugal Matrix (C)\n",
+    "    C = sp.Matrix.zeros(5, 5)\n",
+    "    dq = sp.Matrix([dq1, dq2, dq3, dq4, dq5])\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            C[i, j] = 0\n",
+    "            for k in range(5):\n",
+    "                C[i, j] += 0.5 * (M[i, j].diff(dq[k]) + M[i, k].diff(dq[j]) - M[j, k].diff(dq[i])) * dq[k]\n",
+    "\n",
+    "    # Generalized Torques (tau)\n",
+    "    tau_dynamic = M * sp.Matrix([ddq1, ddq2, ddq3, ddq4, ddq5]) + C * sp.Matrix([dq1, dq2, dq3, dq4, dq5]) + tau_static\n",
+    "\n",
+    "    # Simplify the total torques\n",
+    "    tau_dynamic_simplified = sp.simplify(tau_dynamic)\n",
+    "\n",
+    "    # Provide numerical values for testing\n",
+    "    values = {\n",
+    "        d_1: d_1_val,\n",
+    "        d_5: d_5_val,\n",
+    "        a_2: a_2_val,\n",
+    "        a_3: a_3_val,\n",
+    "        m1: masses[0],\n",
+    "        m2: masses[1],\n",
+    "        m3: masses[2],\n",
+    "        m4: masses[3],\n",
+    "        m5: masses[4],\n",
+    "        I1_xx: inertias[0][0],\n",
+    "        I1_yy: inertias[0][1],\n",
+    "        I1_zz: inertias[0][2],\n",
+    "        I2_xx: inertias[1][0],\n",
+    "        I2_yy: inertias[1][1],\n",
+    "        I2_zz: inertias[1][2],\n",
+    "        I3_xx: inertias[2][0],\n",
+    "        I3_yy: inertias[2][1],\n",
+    "        I3_zz: inertias[2][2],\n",
+    "        I4_xx: inertias[3][0],\n",
+    "        I4_yy: inertias[3][1],\n",
+    "        I4_zz: inertias[3][2],\n",
+    "        I5_xx: inertias[4][0],\n",
+    "        I5_yy: inertias[4][1],\n",
+    "        I5_zz: inertias[4][2],\n",
+    "        F_ext_x: external_forces[0],\n",
+    "        F_ext_y: external_forces[1],\n",
+    "        F_ext_z: external_forces[2],\n",
+    "        T_ext_1: external_torques[0],\n",
+    "        T_ext_2: external_torques[1],\n",
+    "        T_ext_3: external_torques[2],\n",
+    "        T_ext_4: external_torques[3],\n",
+    "        T_ext_5: external_torques[4],\n",
+    "    }\n",
+    "\n",
+    "    # Initialize the maximum torque tracker\n",
+    "    max_torque_per_joint = np.zeros(5)\n",
+    "\n",
+    "    # Define the range for joint angles\n",
+    "    angle_range = np.linspace(-np.pi, np.pi, 10)  # 10 steps from -π to π\n",
+    "\n",
+    "    # Generate all combinations of joint angles\n",
+    "    angle_combinations = product(angle_range, repeat=5)\n",
+    "\n",
+    "    # Precompute torque function\n",
+    "    tau_dynamic_func = sp.lambdify(\n",
+    "        (theta_1, theta_2, theta_3, theta_4, theta_5, dq1, dq2, dq3, dq4, dq5, ddq1, ddq2, ddq3, ddq4, ddq5),\n",
+    "        tau_dynamic_simplified.subs(values),\n",
+    "        \"numpy\",\n",
+    "    )\n",
+    "\n",
+    "    # Iterate over all angle combinations and compute torques for each velocity and acceleration combination\n",
+    "    for angles in angle_combinations:\n",
+    "        for velocities in velocity_range:\n",
+    "            for accelerations in acceleration_range:\n",
+    "                numerical_torques = np.array(tau_dynamic_func(*angles, *velocities, *accelerations), dtype=float).flatten()\n",
+    "                max_torque_per_joint = np.maximum(max_torque_per_joint, np.abs(numerical_torques))\n",
+    "\n",
+    "    # Plot the maximum torques\n",
+    "    joints = [\"Joint 1\", \"Joint 2\", \"Joint 3\", \"Joint 4\", \"Joint 5\"]\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    bars = plt.bar(joints, max_torque_per_joint.tolist(), color=\"blue\")\n",
+    "    plt.xlabel(\"Joints\")\n",
+    "    plt.ylabel(\"Maximum Torque (Nm)\")\n",
+    "    plt.title(\"Maximum Dynamic Torque on Each Joint Across All Configurations\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.6)\n",
+    "\n",
+    "    # Annotate bars with their values\n",
+    "    for bar in bars:\n",
+    "        yval = bar.get_height()\n",
+    "        plt.text(\n",
+    "            bar.get_x() + bar.get_width() / 2,\n",
+    "            yval,\n",
+    "            f\"{yval:.2f}\",\n",
+    "            va=\"bottom\" if yval < 0 else \"top\",\n",
+    "            ha=\"center\",\n",
+    "            color=\"black\",\n",
+    "        )\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Print the maximum torques\n",
+    "    print(f\"Maximum Dynamic Torques for given values: {max_torque_per_joint.tolist()}\")\n",
+    "    return max_torque_per_joint.tolist()\n",
+    "\n",
+    "# Experiment with different values\n",
+    "d_1_val = 0.1\n",
+    "d_5_val = 0.1\n",
+    "a_2_val = 0.5\n",
+    "a_3_val = 0.5\n",
+    "masses = [1.0, 1.0, 1.0, 1.0, 1.0]\n",
+    "inertias = [\n",
+    "    [0.1, 0.1, 0.1],\n",
+    "    [0.1, 0.1, 0.1],\n",
+    "    [0.1, 0.1, 0.1],\n",
+    "    [0.1, 0.1, 0.1],\n",
+    "    [0.1, 0.1, 0.1],\n",
+    "]\n",
+    "mass_camera = 0.5\n",
+    "mass_lights = 0.5\n",
+    "external_forces = [0, 0, 0]  # No external forces in this example\n",
+    "external_torques = [0, 0, 0, 0, 0]  # No external torques in this example\n",
+    "\n",
+    "# Define the range for velocities and accelerations\n",
+    "velocity_range = list(product([0, 1], repeat=5))  # Example: [0, 1] for each joint\n",
+    "acceleration_range = list(product([0, 1], repeat=5))  # Example: [0, 1] for each joint\n",
+    "\n",
+    "# Perform the dynamic torque analysis\n",
+    "print(\"Performing dynamic torque analysis across all configurations and velocity/acceleration ranges...\")\n",
+    "max_torque_per_joint = compute_dynamic_torques(\n",
+    "    d_1_val,\n",
+    "    d_5_val,\n",
+    "    a_2_val,\n",
+    "    a_3_val,\n",
+    "    masses,\n",
+    "    inertias,\n",
+    "    mass_camera,\n",
+    "    mass_lights,\n",
+    "    external_forces,\n",
+    "    external_torques,\n",
+    "    velocity_range,\n",
+    "    acceleration_range,\n",
+    ")\n",
+    "\n",
+    "print(f\"Maximum Dynamic Torques for given values: {max_torque_per_joint}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with interias "
    ]
   },
   {
