Refactor jacobians and joint positions calculation for improved efficiency and clarity

--- a/Modeling/Kinematics/math/jacobians/Verify_jac.ipynb
+++ b/Modeling/Kinematics/math/jacobians/Verify_jac.ipynb
@@ -140,109 +140,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jacobian matrix:\n",
-      " [[ 1.2246468e-17  1.0000000e-01  1.0000000e-01  1.0000000e-01\n",
-      "   0.0000000e+00]\n",
-      " [ 1.0000000e+00  6.1232340e-17  3.0616170e-17  0.0000000e+00\n",
-      "   0.0000000e+00]\n",
-      " [-0.0000000e+00  1.0000000e+00  5.0000000e-01  0.0000000e+00\n",
-      "   0.0000000e+00]\n",
-      " [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  0.0000000e+00\n",
-      "   0.0000000e+00]\n",
-      " [ 0.0000000e+00 -1.0000000e+00 -1.0000000e+00 -1.0000000e+00\n",
-      "  -1.2246468e-16]\n",
-      " [ 1.0000000e+00  6.1232340e-17  6.1232340e-17  6.1232340e-17\n",
-      "  -1.0000000e+00]]\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Define DH parameters\n",
-    "d1 = 0.1\n",
-    "d5 = 0.1\n",
-    "a2 = 0.5\n",
-    "a3 = 0.5\n",
-    "alpha = np.deg2rad([90, 0, 0, 90, 0])\n",
-    "\n",
-    "# Helper function to create a transformation matrix from DH parameters\n",
-    "def dh_matrix(theta, d, a, alpha):\n",
-    "    return np.array(\n",
-    "        [\n",
-    "            [\n",
-    "                np.cos(theta),\n",
-    "                -np.sin(theta) * np.cos(alpha),\n",
-    "                np.sin(theta) * np.sin(alpha),\n",
-    "                a * np.cos(theta),\n",
-    "            ],\n",
-    "            [\n",
-    "                np.sin(theta),\n",
-    "                np.cos(theta) * np.cos(alpha),\n",
-    "                -np.cos(theta) * np.sin(alpha),\n",
-    "                a * np.sin(theta),\n",
-    "            ],\n",
-    "            [0, np.sin(alpha), np.cos(alpha), d],\n",
-    "            [0, 0, 0, 1],\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "# Function to compute the Jacobian matrix numerically\n",
-    "def compute_jacobian(thetas):\n",
-    "    theta1, theta2, theta3, theta4, theta5 = thetas\n",
-    "    A1 = dh_matrix(theta1, d1, 0, alpha[0])\n",
-    "    A2 = dh_matrix(theta2, 0, a2, alpha[1])\n",
-    "    A3 = dh_matrix(theta3, 0, a3, alpha[2])\n",
-    "    A4 = dh_matrix(theta4, 0, 0, alpha[3])\n",
-    "    A5 = dh_matrix(theta5, d5, 0, alpha[4])\n",
-    "\n",
-    "    T1 = A1\n",
-    "    T2 = A1 @ A2\n",
-    "    T3 = A1 @ A2 @ A3\n",
-    "    T4 = A1 @ A2 @ A3 @ A4\n",
-    "    T5 = A1 @ A2 @ A3 @ A4 @ A5\n",
-    "\n",
-    "    position = T5[:3, 3]\n",
-    "    z0 = np.array([0, 0, 1])\n",
-    "    z1 = T1[:3, :3] @ z0\n",
-    "    z2 = T2[:3, :3] @ z0\n",
-    "    z3 = T3[:3, :3] @ z0\n",
-    "    z4 = T4[:3, :3] @ z0\n",
-    "\n",
-    "    o0 = np.array([0, 0, 0])\n",
-    "    o1 = T1[:3, 3]\n",
-    "    o2 = T2[:3, 3]\n",
-    "    o3 = T3[:3, 3]\n",
-    "    o4 = T4[:3, 3]\n",
-    "\n",
-    "    Jv = np.column_stack(\n",
-    "        [\n",
-    "            np.cross(z0, position - o0),\n",
-    "            np.cross(z1, position - o1),\n",
-    "            np.cross(z2, position - o2),\n",
-    "            np.cross(z3, position - o3),\n",
-    "            np.cross(z4, position - o4),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    Jw = np.column_stack([z0, z1, z2, z3, z4])\n",
-    "\n",
-    "    J = np.vstack([Jv, Jw])\n",
-    "\n",
-    "    return J\n",
-    "\n",
-    "# Example usage\n",
-    "thetas = np.deg2rad([0, 0, 0, 0, 0])\n",
-    "J = compute_jacobian(thetas)\n",
-    "print(\"Jacobian matrix:\\n\", J)\n"
+    "# Map of singularity"
    ]
   }
  ],
